fix style errors on mobile view

--- a/styles/form.css
+++ b/styles/form.css
@@ -125,6 +125,7 @@ main,
 
 #right-panel>form>fieldset input,
 #right-panel>form>fieldset a {
+    width: 100%;
     height: 1.5rem;
     border: none;
     border-radius: 5px;
